--- a/index.html
+++ b/index.html
@@ -10,4 +10,31 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
+    <body>
+        <div class="main">
+            <div class="sidebar">
+                <div class="menu-top">
+                    
+                </div>
+                <div class="menu-bottom">
+
+                </div>
+            </div>
+            <div class="header">
+
+            </div>
+            <div class="searchbar">
+
+            </div>
+            <div class="profile-options">
+
+            </div>
+            <div class="logo-container">
+
+            </div>
+            <div class="project-options">
+
+            </div> 
+        </div>
+    </body>
 </html>
