--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <body>
         <div class="main">
             <div class="sidebar">
-                <div class="menu-top">
-                    
+                <div class="menu-nav">
+                    <img src="/assets/dashboard.png" alt="dashboard icon">
                 </div>
                 <div class="menu-bottom">
 
@@ -26,7 +26,7 @@
             <div class="searchbar">
 
             </div>
-            <div class="profile-options">
+            <div class="user-info">
 
             </div>
             <div class="logo-container">
