Rename assets and add sidebar icons in

--- a/index.html
+++ b/index.html
@@ -14,10 +14,44 @@
         <div class="main">
             <div class="sidebar">
                 <div class="menu-nav">
-                    <img src="/assets/dashboard.png" alt="dashboard icon">
+                    <div class="home">
+                        <img src="/assets/dashboard.png" alt="dashboard icon">
+                        <p>Home</p>
+                    </div>
+                    <div class="profile">
+                        <img src="/assets/profile.png" alt="dashboard icon">
+                        <p>Profile</p>
+                    </div> 
+                    <div class="messages">
+                        <img src="/assets/messages.png" alt="dashboard icon">
+                        <p>Messages</p>
+                    </div>
+                    <div class="history">
+                        <img src="/assets/history.png" alt="dashboard icon">
+                        <p>History</p>
+                    </div>
+                    <div class="tasks">
+                        <img src="/assets/task.png" alt="dashboard icon">
+                        <p>Tasks</p>
+                    </div> 
+                    <div class="communities">
+                        <img src="/assets/community.png" alt="dashboard icon">
+                        <p>Communities</p>
+                    </div>  
                 </div>
                 <div class="menu-bottom">
-
+                    <div class="settings">
+                        <img src="/assets/settings.png" alt="dashboard icon">
+                        <p>Settings</p>
+                    </div>
+                    <div class="support">
+                        <img src="/assets/support.png" alt="dashboard icon">
+                        <p>Support</p>
+                    </div> 
+                    <div class="privacy">
+                        <img src="/assets/privacy.png" alt="dashboard icon">
+                        <p>Privacy</p>
+                    </div>
                 </div>
             </div>
             <div class="header">
