Add home menu icon and dashboard's text option

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         <div class="main">
             <div class="sidebar">
                 <div class="menu-nav">
-                    <div class="home">
+                    <div class="dashboard">
                         <img src="/assets/dashboard.png" alt="dashboard icon">
+                        <p>Dashboard</p>
+                    </div>
+                    <div class="home">
+                        <img src="/assets/home.png" alt="dashboard icon">
                         <p>Home</p>
                     </div>
                     <div class="profile">
