Set up html for Announcecments and Trending panels

--- a/index.html
+++ b/index.html
@@ -11,68 +11,81 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="main">
-            <div class="sidebar">
-                <div class="menu-nav">
-                    <div class="dashboard">
-                        <img src="/assets/dashboard.png" alt="dashboard icon">
-                        <p>Dashboard</p>
-                    </div>
-                    <div class="home">
-                        <img src="/assets/home.png" alt="dashboard icon">
-                        <p>Home</p>
-                    </div>
-                    <div class="profile">
-                        <img src="/assets/profile.png" alt="dashboard icon">
-                        <p>Profile</p>
-                    </div> 
-                    <div class="messages">
-                        <img src="/assets/messages.png" alt="dashboard icon">
-                        <p>Messages</p>
-                    </div>
-                    <div class="history">
-                        <img src="/assets/history.png" alt="dashboard icon">
-                        <p>History</p>
-                    </div>
-                    <div class="tasks">
-                        <img src="/assets/task.png" alt="dashboard icon">
-                        <p>Tasks</p>
-                    </div> 
-                    <div class="communities">
-                        <img src="/assets/community.png" alt="dashboard icon">
-                        <p>Communities</p>
-                    </div>  
+        <header class="header">
+
+        </header>
+        <nav class="sidebar">
+            <div class="menu-main">
+                <div class="dashboard">
+                    <img src="/assets/dashboard.png" alt="dashboard icon">
+                    <p>Dashboard</p>
                 </div>
-                <div class="menu-bottom">
-                    <div class="settings">
-                        <img src="/assets/settings.png" alt="dashboard icon">
-                        <p>Settings</p>
-                    </div>
-                    <div class="support">
-                        <img src="/assets/support.png" alt="dashboard icon">
-                        <p>Support</p>
-                    </div> 
-                    <div class="privacy">
-                        <img src="/assets/privacy.png" alt="dashboard icon">
-                        <p>Privacy</p>
-                    </div>
+                <div class="home">
+                    <img src="/assets/home.png" alt="dashboard icon">
+                    <p>Home</p>
+                </div>
+                <div class="profile">
+                    <img src="/assets/profile.png" alt="dashboard icon">
+                    <p>Profile</p>
+                </div> 
+                <div class="messages">
+                    <img src="/assets/messages.png" alt="dashboard icon">
+                    <p>Messages</p>
+                </div>
+                <div class="history">
+                    <img src="/assets/history.png" alt="dashboard icon">
+                    <p>History</p>
+                </div>
+                <div class="tasks">
+                    <img src="/assets/task.png" alt="dashboard icon">
+                    <p>Tasks</p>
+                </div> 
+                <div class="communities">
+                    <img src="/assets/community.png" alt="dashboard icon">
+                    <p>Communities</p>
+                </div>  
+            </div>
+            <div class="menu-secondary">
+                <div class="settings">
+                    <img src="/assets/settings.png" alt="dashboard icon">
+                    <p>Settings</p>
+                </div>
+                <div class="support">
+                    <img src="/assets/support.png" alt="dashboard icon">
+                    <p>Support</p>
+                </div> 
+                <div class="privacy">
+                    <img src="/assets/privacy.png" alt="dashboard icon">
+                    <p>Privacy</p>
                 </div>
             </div>
-            <div class="header">
+        </nav>
+        <main class="content">
+            <div class="projects">
 
             </div>
-            <div class="searchbar">
-
+            <div class="projects">
+                
             </div>
-            <div class="user-info">
+        </main>
+        <div class="right-panels">
+            <h4>Announcements</h4>
+            <div class="announcements">
+                
+                <div class="announcement">
 
+                </div>
+                <div class="announcement-border"></div>
+                <div class="announcement">
+
+                </div>
             </div>
-            <div class="logo-container">
+            <h4>Trending</h4>
+            <div class="trending">
+                <div class="trend">
 
+                </div>
             </div>
-            <div class="project-options">
-
-            </div> 
         </div>
     </body>
 </html>
