Set up header html

--- a/index.html
+++ b/index.html
@@ -12,50 +12,68 @@
     </head>
     <body>
         <header class="header">
-
+            <div class="searchbar-container">
+                <label for="search-field"><img src="./assets/magnifying-glass.png" alt="search icon"></label>
+                <input type="text" id="search-field" class="search-input">
+            </div>
+            <div class="profile-container">
+                <img class="notification-img" src="./assets/notification.png" alt="notification icon">
+                <img class="user-profile-small" src="./assets/pug-in-sweater.jpg" alt="user profile image">
+                <h3 class="username">Paul Glee</h3>
+            </div>
+            <div class="welcome-container">
+                <img class="user-profile" src="./assets/pug-in-sweater.jpg" alt="user profile image">
+                <p class="greeting-para">Hi there,</p>
+                <p class="main-username">Paul Glee (@poggly)</p>
+            </div>
+            <div class="btns-container">
+                <button class="header-btn">New</button>
+                <button class="header-btn">Upload</button>
+                <button class="header-btn">Share</button>
+            </div>
         </header>
         <nav class="sidebar">
             <div class="menu-main">
                 <div class="dashboard">
                     <img src="/assets/dashboard.png" alt="dashboard icon">
                     <p>Dashboard</p>
-                </div>
+                </div> 
                 <div class="home">
-                    <img src="/assets/home.png" alt="dashboard icon">
+                    <img src="/assets/home.png" alt="home icon">
                     <p>Home</p>
                 </div>
                 <div class="profile">
-                    <img src="/assets/profile.png" alt="dashboard icon">
+                    <img src="/assets/profile.png" alt="profile icon">
                     <p>Profile</p>
                 </div> 
                 <div class="messages">
-                    <img src="/assets/messages.png" alt="dashboard icon">
+                    <img src="/assets/messages.png" alt="messages icon">
                     <p>Messages</p>
                 </div>
                 <div class="history">
-                    <img src="/assets/history.png" alt="dashboard icon">
+                    <img src="/assets/history.png" alt="history icon">
                     <p>History</p>
                 </div>
                 <div class="tasks">
-                    <img src="/assets/task.png" alt="dashboard icon">
+                    <img src="/assets/task.png" alt="tasks icon">
                     <p>Tasks</p>
                 </div> 
                 <div class="communities">
-                    <img src="/assets/community.png" alt="dashboard icon">
+                    <img src="/assets/community.png" alt="communities icon">
                     <p>Communities</p>
                 </div>  
             </div>
             <div class="menu-secondary">
                 <div class="settings">
-                    <img src="/assets/settings.png" alt="dashboard icon">
+                    <img src="/assets/settings.png" alt="settings icon">
                     <p>Settings</p>
                 </div>
                 <div class="support">
-                    <img src="/assets/support.png" alt="dashboard icon">
+                    <img src="/assets/support.png" alt="support icon">
                     <p>Support</p>
                 </div> 
                 <div class="privacy">
-                    <img src="/assets/privacy.png" alt="dashboard icon">
+                    <img src="/assets/privacy.png" alt="privacy icon">
                     <p>Privacy</p>
                 </div>
             </div>
