Add grid display for Sidebar and  Header

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Admin Dashboard</title>
-        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header class="header">
@@ -22,7 +22,7 @@
                 <h3 class="username">Paul Glee</h3>
             </div>
             <div class="welcome-container">
-                <img class="user-profile" src="./assets/pug-in-sweater.jpg" alt="user profile image">
+                <img class="user-profile-big" src="./assets/pug-in-sweater.jpg" alt="user profile image">
                 <p class="greeting-para">Hi there,</p>
                 <p class="main-username">Paul Glee (@poggly)</p>
             </div>
