Format searchbar, profile, greetings and header buttons sections

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="welcome-container">
                 <img class="user-profile-big" src="./assets/pug-in-sweater.jpg" alt="user profile image">
-                <p class="greeting-para">Hi there,</p>
+                <p class="greeting">Hey there,</p>
                 <p class="main-username">Paul Glee (@poggly)</p>
             </div>
             <div class="btns-container">
