Change sidebar html, set menu-icon size and font-size

--- a/index.html
+++ b/index.html
@@ -33,49 +33,53 @@
             </div>
         </header>
         <nav class="sidebar">
+            <div class="logo">
+                <img class="logo-icon"  src="/assets/dashboard.png" alt="dashboard icon">
+                <h3>Dashboard</h3>
+            </div> 
             <div class="menu-main">
-                <div class="dashboard">
-                    <img src="/assets/dashboard.png" alt="dashboard icon">
-                    <p>Dashboard</p>
-                </div> 
-                <div class="home">
-                    <img src="/assets/home.png" alt="home icon">
-                    <p>Home</p>
-                </div>
-                <div class="profile">
-                    <img src="/assets/profile.png" alt="profile icon">
-                    <p>Profile</p>
-                </div> 
-                <div class="messages">
-                    <img src="/assets/messages.png" alt="messages icon">
-                    <p>Messages</p>
-                </div>
-                <div class="history">
-                    <img src="/assets/history.png" alt="history icon">
-                    <p>History</p>
-                </div>
-                <div class="tasks">
-                    <img src="/assets/task.png" alt="tasks icon">
-                    <p>Tasks</p>
-                </div> 
-                <div class="communities">
-                    <img src="/assets/community.png" alt="communities icon">
-                    <p>Communities</p>
-                </div>  
+                <ul>
+                    <li>
+                        <img class="menu-icon" src="/assets/home.png" alt="home icon">
+                        <p>Home</p>
+                    </li>
+                    <li>
+                        <img class="menu-icon"  src="/assets/profile.png" alt="profile icon">
+                        <p>Profile</p>
+                    </li>
+                    <li>
+                        <img class="menu-icon"  src="/assets/messages.png" alt="messages icon">
+                        <p>Messages</p>
+                    </li>
+                    <li>
+                        <img class="menu-icon"  src="/assets/history.png" alt="history icon">
+                        <p>History</p>
+                    </li>
+                    <li>
+                        <img class="menu-icon"  src="/assets/task.png" alt="tasks icon">
+                        <p>Tasks</p>
+                    </li>
+                    <li>
+                        <img class="menu-icon"  src="/assets/community.png" alt="communities icon">
+                        <p>Communities</p>
+                    </li>
+                </ul>
             </div>
             <div class="menu-secondary">
-                <div class="settings">
-                    <img src="/assets/settings.png" alt="settings icon">
-                    <p>Settings</p>
-                </div>
-                <div class="support">
-                    <img src="/assets/support.png" alt="support icon">
-                    <p>Support</p>
-                </div> 
-                <div class="privacy">
-                    <img src="/assets/privacy.png" alt="privacy icon">
-                    <p>Privacy</p>
-                </div>
+                <ul>
+                    <li>
+                        <img class="menu-icon"  src="/assets/settings.png" alt="settings icon">
+                        <p>Settings</p>
+                    </li>
+                    <li>
+                        <img class="menu-icon"  src="/assets/support.png" alt="support icon">
+                        <p>Support</p>
+                    </li>
+                    <li>
+                        <img class="menu-icon"  src="/assets/privacy.png" alt="privacy icon">
+                        <p>Privacy</p>
+                    </li>
+                </ul>
             </div>
         </nav>
         <main class="content">
