Initial formmatting for project section

--- a/index.html
+++ b/index.html
@@ -83,23 +83,50 @@
             </div>
         </nav>
         <main class="content">
-            <h4>Your Projects</h4>
-            <div class="projects">
-                <div class="color-block"></div>
-                <div class="text-block">
-                    <h5 class="project-name">Project L</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="projects-container">
+                <h4>Your Projects</h4>
+                <div class="project">
+                    <div class="color-block"></div>
+                    <div class="text-block">
+                        <h5 class="project-name">Project L</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div class="action-block">
+                        <img class="favorite" src="./assets/save.png" alt="save icon">
+                        <img class="delete" src="./assets/delete.png" alt="delete icon">
+                        <img class="share" src="./assets/share.png" alt="share icon">
+                    </div>
                 </div>
-                <div class="action-block">
-                    <img class="favorite" src="./assets/save.png" alt="save icon">
-                    <img class="delete" src="./assets/delete.png" alt="delete icon">
-                    <img class="share" src="./assets/share.png" alt="share icon">
+                <div class="project">
+                    <div class="color-block"></div>
+                    <div class="text-block">
+                        <h5 class="project-name">Project Infinite Money</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div class="action-block">
+                        <img class="favorite" src="./assets/save.png" alt="save icon">
+                        <img class="delete" src="./assets/delete.png" alt="delete icon">
+                        <img class="share" src="./assets/share.png" alt="share icon">
+                    </div>
                 </div>
-            </div>
-            <div class="projects">
-                
+                <div class="project">
+                    <div class="color-block"></div>
+                    <div class="text-block">
+                        <h5 class="project-name">Project Doggo</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div class="action-block">
+                        <img class="favorite" src="./assets/save.png" alt="save icon">
+                        <img class="delete" src="./assets/delete.png" alt="delete icon">
+                        <img class="share" src="./assets/share.png" alt="share icon">
+                    </div>
+                </div>
             </div>
         </main>
         <div class="right-panels">
