Add dummy text and images for Trending section and set formatting

--- a/index.html
+++ b/index.html
@@ -128,25 +128,52 @@
                     </div>
                 </div>
             </div>
+            <div class="right-panels">
+                <h4>Announcements</h4>
+                <div class="announ-container">
+                    <div class="announcement">
+                        <h6>Site Maintenance</h6>
+                        <p>Mollis aliquam ut porttitor leo a diam sollicitudin. 
+                            Quisque non tellus orci ac auctor augue.</p>
+                    </div>
+                    <div class="announcement-border"></div>
+                    <div class="announcement">
+                        <h6>Show Off Your Moves</h6>
+                        <p>Vulputate mi sit amet mauris commodo quis imperdiet massa. 
+                            Ac turpis egestas maecenas pharetra convallis posuere.</p>
+                    </div>
+                    <div class="announcement-border"></div>
+                    <div class="announcement">
+                        <h6>Updated Pivacy Policy</h6>
+                        <p>Neque volutpat ac tincidunt vitae semper quis. Vulputate 
+                            mi sit amet mauris commodo quis imperdiet massa.</p>
+                    </div>
+                </div>
+                <h4>Trending</h4>
+                <div class="trending">
+                    <div class="trend">
+                        <img class="trend-img" src="./assets/pug-in-sweater.jpg" alt="trending image">
+                        <p>
+                            <span class="trend-tag">@poggly</span><br>
+                            <span class="trend-text">Pug making Pog moves</span>
+                        </p>
+                    </div>
+                    <div class="trend">
+                        <img class="trend-img" src="./assets/sleepy-dog.jpg" alt="trending image">
+                        <p>
+                            <span class="trend-tag">@jackiewaggie</span><br>
+                            <span class="trend-text">New Cool Project</span>
+                        </p>
+                    </div>
+                    <div class="trend">
+                        <img class="trend-img" src="./assets/small-chi.jpg" alt="trending image">
+                        <p>
+                            <span class="trend-tag">@smoldoge</span><br>
+                            <span class="trend-text">Revamped App</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </main>
-        <div class="right-panels">
-            <h4>Announcements</h4>
-            <div class="announcements">
-                
-                <div class="announcement">
-
-                </div>
-                <div class="announcement-border"></div>
-                <div class="announcement">
-
-                </div>
-            </div>
-            <h4>Trending</h4>
-            <div class="trending">
-                <div class="trend">
-
-                </div>
-            </div>
-        </div>
     </body>
 </html>
